# wetall-scanner

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  CONVENTIONS.md  Dockerfile  IA_method.md  Makefile  README.md  dashboard.py  dump_pages.py  extract_urls.py  main.py  notes.md  pyproject.toml  requirements.txt  run_test.py  scanner.py  table_DDL.sql  table_DDL_cdc.sql  test_github_ip.py  wetall_scanner.py
.github/workflows/: check.yml  cron_trigger.yml  cron_trigger_scan.yml  cron_trigger_scan_empty.yml  manual_test.yml  test.yml  test_ip.yml
dashboard/: dashboard.py
docs/: backlog.md  w1_report.md
legacy/: CONVENTIONS.md  run_test.py
legacy/.github/workflows/: ci.yml  cron_trigger_scan_merchant.yml
legacy/src/: main.py
legacy/src/extract_url/: sync.py
legacy/src/scanner/: analyzer.py  http_client.py  parser.py  rescan_utility.py
legacy/tests/: conftest.py  test_analyzer.py  test_extract_url.py  test_fetch_product.py  test_http_client.py  test_parser.py  test_pipeline.py  test_pipeline_modes.py  test_scraper.py  test_smart_scan.py
legacy/tests/integration/: test_database_flow.py  test_smart_scan.py
legacy/tests/smoke/: test_real_amazon.py
scripts/: save_fixtures.py
sql/: dim_produit_DDL.sql  fact_stock_status_DDL.sql  gold_dashboard_stats_DDL.sql  v_gold_dashboard_stats_DDL.sql
src/: main.py
src/extract_url/: sitemap.py  sync.py
src/scanner/: __init__.py  analyzer.py  database.py  http_client.py  orchestrator.py  parser.py  pipeline.py  rescan_utility.py  strategies.py
src/wetall_scanner/: api.py  main.py
src/wetall_scanner/extract_url/: __init__.py  sync.py
src/wetall_scanner/scanner/: config.py  constants.py  database.py  extractor.py  factory.py  http_client.py  orchestrator.py  strategies.py
src/wetall_scanner/scanner/strategies/: __init__.py  amazon.py  base.py  decathlon.py  factory.py  generic.py
src/wetall_scanner/scanner/utils/: html_inspector.py
tests/: conftest.py  test_analyzer.py  test_dashboard.py  test_extract_url.py  test_fetch_product.py  test_http_client.py  test_orchestrator.py  test_parser.py  test_pipeline.py  test_pipeline_modes.py  test_scraper.py  test_smart_scan.py
tests/fixtures/: amazon_en_stock.html  amazon_hors_stock.html  decathlon_bloque.html  wetall_discovery.html
tests/fixtures/html/ko/: amazon_ko_4.html
tests/integration/: test_api_integration.py  test_database_flow.py  test_database_persistence.py  test_db_schema.py  test_smart_scan.py
tests/smoke/: test_full_workflow.py  test_link_discovery.py  test_stock_monitoring.py
tests/unit/: test_amazon_scanner.py  test_database.py  test_decathlon_scanner.py  test_http_client.py  test_orchestrator.py  test_strategies.py
(+3 files in other folders)
