[project]
name = "wetall-scanner"
version = "0.1.0"
description = "Pipeline de monitoring des liens affiliés Wetall.fr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "fastapi>=0.136.3",
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.15",
    "uvicorn>=0.48.0",
]

[tool.ruff]
# Applique le style compatible avec Black
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"] # E=errors, F=flakes, I=isort (tri imports)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
