[project]
name = "wetall-scanner"
version = "0.1.0"
description = "Pipeline de monitoring des liens affiliés Wetall.fr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "psycopg2-binary>=2.9.12",
    "pygithub>=2.3.0",
    "python-dotenv>=1.2.2",
    "respx>=0.23.1",
    "typing>=3.10.0.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.15",
]

[tool.ruff]
# Applique le style compatible avec Black
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"] # E=errors, F=flakes, I=isort (tri imports)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
