[project]
name = "wetall-scanner"
version = "0.1.0"
description = "Scanner de disponibilité de produits marchands"
authors = [
    { name = "Michael Garcia", email = "michael@alpinedata.fr" }
]
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wetall_scanner"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "smoke: tests rapides de bout en bout (E2E)",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
]

[tool.ruff]
# Indique à Ruff de formater comme Black
line-length = 88

[tool.ruff.format]
# Active le formatage compatible Black
quote-style = "double"
